# srbd_mpc

./: .gitignore  CMakeLists.txt  controller.py  gait_planner.py  main.py  mpc.py  mpc_to_wbid.py  package.xml  srbd_plotting.py
include/: mpc.hpp  mpc_osqp_eigen.hpp
scripts/: mpc.py
src/: mpc.cpp  mpc.py  mpc_python.cpp  mpc_to_wbid.py  mpc_to_wbid_node.cpp
