<?xml version="1.0"?>
<package format="2">
  <name>g1_mpc</name>
  <version>0.0.1</version>
  <description>Single Rigid Body Controller Package for G1 humanoid robot</description>

  <maintainer email="yiannisloizu@gmail.com">Ioannis Loizou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>g1_msgs</depend>
  <depend>pal_statistics</depend>

  
  <export>
  </export>
</package>
